Add more card and added flex-wrapp

--- a/assets/css/sass/page-3-content.scss
+++ b/assets/css/sass/page-3-content.scss
@@ -1,11 +1,10 @@
 .team-section {
   display: flex;
   gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .card {
   display: flex;
   flex-direction: column;
 }
-
-
