--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -7,7 +7,7 @@
   background: white;
   display: block;
   margin-left: -5%;
-  padding-top: 10px;
+  padding-top: 1%;
 
   /*Breakpoint for when menu can't fit the screen anymore*/
   @media screen and (max-width: 1190px) {
