--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -8,6 +8,7 @@ Version: 1.0
 @import "fonts.scss"; /*Fonts SASS file*/
 @import "header.scss"; /*Header SASS file*/
 @import "articles.scss"; /*Articles SASS file*/
+@import "page-2-hero.scss"; /*Hero SASS file*/
 @import "page-3-content.scss"; /*page-3-content SASS file*/
 
 html {
