--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,8 +542,27 @@ body {
 }
 
 /*------FOOTER-----*/
-#footer {
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  /* Distribute items equally with space in between */
   width: 100%;
+  margin: 4% 0 0 0;
+  border-top: 1px solid #555;
+  /* Adjust margin as needed */
+}
+
+/* Style individual flex items */
+.flex-item {
+  flex: 1;
+  /* Each item takes up equal space */
+  margin: 2% 0;
+  padding: 10px;
+  text-align: left;
+}
+
+.flex-item:nth-child(3) {
+  margin-right: 80px; /* Larger spacing after the third item */
 }
 
 /*# sourceMappingURL=style.css.map */
