--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -11,6 +11,8 @@ Version: 1.0
 @import "page-2-hero.scss"; /*Hero SASS file*/
 @import "page-2-content.scss"; /*page-2-content SASS file*/
 @import "page-3-content.scss"; /*page-3-content SASS file*/
+@import "transitions.scss"; /*transitions SASS file*/
+
 
 html {
   width: 100%;
