--- a/assets/css/sass/transitions.scss
+++ b/assets/css/sass/transitions.scss
@@ -1,19 +1,17 @@
-.transition-1
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0%;
-    z-index: 101;
-    background-color: var(--dark);
-    opacity: 0;
-    pointer-events: none;
-    transition: 0.5s ease-out;
+.transition-1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0%;
+  z-index: 101;
+  background-color: rgb(247, 247, 247);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.3s ease-out;
 }
 
 .transition-1.is_active {
-    opacity: 1;
-    pointer-events: all;
+  opacity: 1;
+  pointer-events: all;
 }
-
