--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -632,6 +632,7 @@ body {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
+  border-top: 2px solid #555;
 }
 
 /* Style individual flex items */
