--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -1,18 +1,19 @@
 /*------FOOTER-----*/
 
 .flex-container {
-	display: flex;
-	justify-content: space-between; /* Distribute items equally with space in between */
-	width: 100%;
-	border-top: 2px solid #555;
+    display: flex;
+    justify-content: space-between; /* Distribute items equally with space in between */
+    width: 100%;
+    border-top: 2px solid #555; /* Add a 2px solid border on the top side */
+    padding-top: 10px; /* Add padding to create space between the border and items */
   }
   
   /* Style individual flex items */
   .flex-item {
-	flex: 1; /* Each item takes up equal space */
-	padding: 10px;
-	text-align: center;
-	border: 1px solid #555;
+    flex: 1; /* Each item takes up equal space */
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #555;
   }
   
   /* Adjust spacing for the third and fourth items */
