--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -12,6 +12,7 @@ Version: 1.0
 @import "page-2-content.scss"; /*page-2-content SASS file*/
 @import "page-3-content.scss"; /*page-3-content SASS file*/
 @import "transitions.scss"; /*transitions SASS file*/
+@import "footer.scss";
 
 
 html {
