--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,6 +584,33 @@ article#article.show .info .date-author {
 }
 
 /*transitions SASS file*/
+/*------FOOTER-----*/
+.flex-container {
+  display: flex;
+  justify-content: space-between; /* Distribute items equally with space in between */
+  width: 100%;
+  border-top: 2px solid #555; /* Add a 2px solid border on the top side */
+  margin: 2% 0;
+  padding: 20px 0; /* Add padding to create space between the border and items */
+}
+
+/* Style individual flex items */
+.flex-item {
+  flex: 1; /* Each item takes up equal space */
+  margin: 0;
+  padding: 10px 0;
+  text-align: left;
+}
+
+/* Adjust spacing for the third and fourth items */
+.flex-item:nth-child(3) {
+  margin-right: 80px; /* Larger spacing after the third item */
+}
+
+.footer-heading {
+  font-weight: bold;
+}
+
 html {
   width: 100%;
   margin: 0;
