--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -1,13 +1,17 @@
 /*------FOOTER-----*/
 
-.flex-container {
+.flex-container, .flex-container-2 {
     display: flex;
     justify-content: space-between; /* Distribute items equally with space in between */
     width: 100%;
-    border-top: 2px solid #555; /* Add a 2px solid border on the top side */
-    margin: 2% 0;
+    margin: 2% 0 1% 0;
     padding: 20px 0; /* Add padding to create space between the border and items */
   }
+
+.flex-container-2 {
+    align-items: flex-end;
+}
+
   
   /* Style individual flex items */
   .flex-item {
@@ -22,6 +26,6 @@
 	margin-right: 80px; /* Larger spacing after the third item */
   }
 
-  .footer-heading {
+  .special-heading {
     font-weight: bold;
   }
