--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,13 +585,16 @@ article#article.show .info .date-author {
 
 /*transitions SASS file*/
 /*------FOOTER-----*/
-.flex-container {
+.flex-container, .flex-container-2 {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
-  border-top: 2px solid #555; /* Add a 2px solid border on the top side */
-  margin: 2% 0;
+  margin: 2% 0 1% 0;
   padding: 20px 0; /* Add padding to create space between the border and items */
+}
+
+.flex-container-2 {
+  align-items: flex-end;
 }
 
 /* Style individual flex items */
@@ -607,7 +610,7 @@ article#article.show .info .date-author {
   margin-right: 80px; /* Larger spacing after the third item */
 }
 
-.footer-heading {
+.special-heading {
   font-weight: bold;
 }
 
