--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,7 +607,7 @@ article#article.show .info .date-author {
   margin-right: 80px; /* Larger spacing after the third item */
 }
 
-.footer-heading {
+.special-heading {
   font-weight: bold;
 }
 
