--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -13,6 +13,7 @@ Version: 1.0
 @import "page-3-content.scss"; /*page-3-content SASS file*/
 @import "transitions.scss"; /*transitions SASS file*/
 @import "footer.scss";
+@import "contact.scss";
 
 
 html {
