--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -21,3 +21,7 @@
   .flex-item:nth-child(3) {
 	margin-right: 80px; /* Larger spacing after the third item */
   }
+
+  .special-heading {
+    font-weight: bold;
+}
