--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -26,7 +26,7 @@
 	margin-right: 80px; /* Larger spacing after the third item */
   }
 
-  .special-heading {
+  .special-heading2 {
     font-weight: bold;
   }
 
