--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -25,3 +25,23 @@
   .special-heading {
     font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+    /* Styles for screens with a maximum width of 600px (typical for mobile devices) */
+  
+    .flex-container,
+    .flex-container-2 {
+      flex-direction: column;
+      align-items: flex-start; /* Stack items vertically for smaller screens */
+    }
+  
+    .flex-item:nth-child(3) {
+      margin-right: 0; /* Remove right margin for the third item on smaller screens */
+    }
+  
+    .google-map {
+      padding-bottom: 30%; /* Adjust padding for the map container on smaller screens */
+    }
+  
+    /* Add more styles as needed for optimal mobile display */
+  }
