Made flex-start attribute

--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -8,8 +8,12 @@
     padding: 20px 0; /* Add padding to create space between the border and items */
   }
 
-.flex-container-2 {
+.flex-container {
     align-items: flex-end;
+}
+
+.flex-container-2 {
+  align-items: flex-start;
 }
 
   
