--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -10,6 +10,10 @@
 .flex-container-2 {
     align-items: flex-end;
 }
+
+.flex-container {
+  align-items: flex-start;
+}
  
   /* Style individual flex items */
 
