--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -9,8 +9,8 @@ Version: 1.0
 @import "header.scss"; /*Header SASS file*/
 @import "articles.scss"; /*Articles SASS file*/
 @import "hero.scss"; /*Hero SASS file*/
-@import "page-2-content.scss"; /*page-2-content SASS file*/
-@import "page-3-content.scss"; /*page-3-content SASS file*/
+@import "team-section.scss"; /*page-3-content SASS file*/
+@import "our-story.scss"; /*
 @import "transitions.scss"; /*transitions SASS file*/
 
 
