--- a/assets/css/sass/team-section.scss
+++ b/assets/css/sass/team-section.scss
@@ -1,16 +1,22 @@
 .team-section {
   display: flex;
   flex-direction: column;
-}
+  padding-top: 6%;
+  padding-bottom: 6%;
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+
 
 .card-section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-top: 1%;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+}
 }
