--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -8,11 +8,11 @@ Version: 1.0
 @import "fonts.scss"; /*Fonts SASS file*/
 @import "header.scss"; /*Header SASS file*/
 @import "articles.scss"; /*Articles SASS file*/
-@import "page-2-hero.scss"; /*Hero SASS file*/
-@import "page-2-content.scss"; /*page-2-content SASS file*/
-@import "page-3-content.scss"; /*page-3-content SASS file*/
+@import "hero.scss"; /*Hero SASS file*/
+@import "team-section.scss"; /*team section SASS file*/
+@import "our-story.scss"; /*ourstory sass file*/
 @import "transitions.scss"; /*transitions SASS file*/
-@import "footer.scss";
+@import "footer.scss"; /*footer sass file*/
 
 html {
   width: 100%;
