--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -4,8 +4,9 @@
     display: flex;
     justify-content: space-between; /* Distribute items equally with space in between */
     width: 100%;
-    margin: 2% 0 1% 0;
-    padding: 20px 0; /* Add padding to create space between the border and items */
+    margin: 2% 0 0 0;
+    padding: 3%; /* Add padding to create space between the border and items */
+    border-top: 2px solid black;
   }
 
 .flex-container {
