--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ i, em {
 ul {
   list-style-type: none;
   list-style-image: none;
+  padding-left: 0;
 }
 
 li {
@@ -149,7 +150,7 @@ a:hover, a:active, a:visited {
 /*! HEADER STYLES */
 #header {
   width: 110%;
-  height: 130px;
+  height: 140px;
   overflow: hidden;
   background: white;
   display: block;
@@ -232,6 +233,8 @@ a:hover, a:active, a:visited {
 }
 #header nav#menu ul {
   display: block;
+  margin: 0;
+  padding: 0;
   /*Close li*/
 }
 #header nav#menu ul li {
@@ -521,7 +524,6 @@ article#article.show .info .date-author {
 .herotext > * {
   flex: 1 1 25%;
   box-sizing: border-box;
-  word-wrap: break-word;
   line-height: 1.38em;
 }
 .herotext > *:not(:last-child) {
@@ -532,39 +534,32 @@ article#article.show .info .date-author {
 .team-section {
   display: flex;
   flex-direction: column;
+  padding-top: 6%;
+  padding-bottom: 6%;
+  border-top: 2px solid black;
 }
-
-.card-section {
+.team-section .card-section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-top: 1%;
 }
-
-.card {
+.team-section .card {
   display: flex;
   flex-direction: column;
 }
 
-/*page-2-content SASS file*/
-.team-section {
-  display: flex;
-  flex-direction: column;
+/*team section SASS file*/
+.our-story {
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+.our-story p {
+  padding-bottom: 1%;
 }
 
-.card-section {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-}
-
-/*page-3-content SASS file*/
+/*ourstory sass file*/
 .transition-1 {
   position: fixed;
   top: 0;
@@ -589,8 +584,9 @@ article#article.show .info .date-author {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
-  margin: 2% 0 1% 0;
-  padding: 20px 0; /* Add padding to create space between the border and items */
+  margin: 2% 0 0 0;
+  padding: 3%; /* Add padding to create space between the border and items */
+  border-top: 2px solid black;
 }
 
 .flex-container {
@@ -633,6 +629,7 @@ article#article.show .info .date-author {
   }
   /* Add more styles as needed for optimal mobile display */
 }
+/*footer sass file*/
 html {
   width: 100%;
   margin: 0;
