--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,8 +584,7 @@ article#article.show .info .date-author {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
-  margin: 2% 0 0 0;
-  padding: 3%; /* Add padding to create space between the border and items */
+  padding: 3% 0; /* Add padding to create space between the border and items */
   border-top: 2px solid black;
 }
 
@@ -600,7 +599,7 @@ article#article.show .info .date-author {
 /* Style individual flex items */
 .flex-item {
   flex: 1; /* Each item takes up equal space */
-  margin: 0;
+  margin: 10px 1%;
   padding: 10px 0;
   text-align: left;
 }
