--- a/assets/css/sass/style.css
+++ b/assets/css/sass/style.css
@@ -102,6 +102,7 @@ i, em {
 ul {
   list-style-type: none;
   list-style-image: none;
+  padding-left: 0;
 }
 
 li {
@@ -509,7 +510,7 @@ article#article.show .info .date-author {
   margin-left: -5vw;
   margin-right: -5vw;
   padding-top: 0%;
-  padding-bottom: 0%;
+  padding-bottom: 1%;
   overflow: hidden;
 }
 
@@ -533,9 +534,8 @@ article#article.show .info .date-author {
 .team-section {
   display: flex;
   flex-direction: column;
-  padding-top: 6%;
-  padding-bottom: 6%;
-  border-bottom: 2px solid black;
+  padding-top: 5%;
+  padding-bottom: 5%;
   border-top: 2px solid black;
 }
 .team-section .card-section {
@@ -543,7 +543,6 @@ article#article.show .info .date-author {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-top: 1%;
 }
 .team-section .card {
   display: flex;
@@ -584,8 +583,9 @@ article#article.show .info .date-author {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
-  margin: 2% 0 1% 0;
-  padding: 20px 0; /* Add padding to create space between the border and items */
+  margin: 2% 0 0 0;
+  padding: 3%; /* Add padding to create space between the border and items */
+  border-top: 2px solid black;
 }
 
 .flex-container {
@@ -611,6 +611,10 @@ article#article.show .info .date-author {
 
 .special-heading {
   font-weight: bold;
+}
+
+.margin-bottom {
+  margin-bottom: 2%;
 }
 
 @media only screen and (max-width: 600px) {
