--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -4,7 +4,8 @@
     display: flex;
     justify-content: space-between; /* Distribute items equally with space in between */
     width: 100%;
-    padding: 3% 0; /* Add padding to create space between the border and items */
+    margin: 0;
+    padding: 2% 0; /* Add padding to create space between the border and items */
     border-top: 2px solid black;
   }
 
