--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,7 +583,8 @@ article#article.show .info .date-author {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
-  padding: 3% 0; /* Add padding to create space between the border and items */
+  margin: 0;
+  padding: 2% 0; /* Add padding to create space between the border and items */
   border-top: 2px solid black;
 }
 
