--- a/assets/css/sass/style.css
+++ b/assets/css/sass/style.css
@@ -536,7 +536,7 @@ article#article.show .info .date-author {
   flex-direction: column;
   padding-top: 5%;
   padding-bottom: 5%;
-  border-top: 2px solid black;
+  border-top: 1px solid #ababab;
 }
 .team-section .card-section {
   display: flex;
@@ -583,8 +583,8 @@ article#article.show .info .date-author {
   display: flex;
   justify-content: space-between; /* Distribute items equally with space in between */
   width: 100%;
-  padding: 3% 0; /* Add padding to create space between the border and items */
-  border-top: 2px solid black;
+  margin: 0;
+  padding: 2% 0; /* Add padding to create space between the border and items */
 }
 
 .flex-container {
@@ -593,12 +593,12 @@ article#article.show .info .date-author {
 
 .flex-container-2 {
   align-items: flex-start;
+  border-top: 1px solid #ababab;
 }
 
 /* Style individual flex items */
 .flex-item {
   flex: 1; /* Each item takes up equal space */
-  margin: 10px 1%;
   padding: 10px 0;
   text-align: left;
 }
