--- a/assets/css/sass/team-section.scss
+++ b/assets/css/sass/team-section.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   padding-top: 5%;
   padding-bottom: 5%;
-  border-top: 2px solid black;
+  border-top: 1px solid #ababab;
 
 .card-section {
   display: flex;
