--- a/assets/css/sass/style.css
+++ b/assets/css/sass/style.css
@@ -507,26 +507,24 @@ article#article.show .info .date-author {
 }
 .hero img {
   width: 100vw;
+  height: auto;
   margin-left: -5vw;
   margin-right: -5vw;
-  padding-top: 0%;
-  padding-bottom: 1%;
   overflow: hidden;
 }
-
-.herotext {
+.hero .herotext {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   padding-top: 1.2rem;
   padding-bottom: 1.2rem;
 }
-.herotext > * {
+.hero .herotext > * {
   flex: 1 1 25%;
-  box-sizing: border-box;
   line-height: 1.38em;
 }
-.herotext > *:not(:last-child) {
+.hero .herotext > *:not(:last-child) {
   margin-right: 0;
 }
 
